changes to header links for fixed a bug where they were being squished together

--- a/css/main.css
+++ b/css/main.css
@@ -94,10 +94,15 @@ body {
 
 .header-right {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   width: 40%;
   padding-right: 3%;
+}
+
+.header-links {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header-right a {
